# meerkat

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  renovate.json
.github/workflows/: ci.yml  goal.lock.yml  goal.md  weekly-security.yml
docs/: identity.md
docs/design/: code-updates.md
meerkat/: Cargo.toml
meerkat-lib/: Cargo.toml
meerkat-lib/src/: error.rs
meerkat-lib/src/net/: actor.rs  ast.rs  codec.rs  mock.rs  mod.rs  types.rs
meerkat-lib/src/runtime/: env.rs  html.rs  interner.rs  limits.rs  mod.rs  nameres.rs  node.rs  txn.rs
meerkat-lib/src/runtime/ast/: mod.rs  printer.rs
meerkat-lib/src/runtime/interpreter/: evaluator.rs  executor.rs
meerkat-lib/src/runtime/manager/: mod.rs
meerkat-lib/src/runtime/parser/: lex.rs  meerkat.lalrpop  mod.rs
meerkat-lib/src/runtime/semantic_analysis/var_analysis/: alpha_rename.rs  dep_analysis.rs  mod.rs  read_write.rs
meerkat-lib/src/runtime/table_actor/: handler.rs
meerkat-lib/src/runtime/tt/: check.rs  mod.rs  types.rs
meerkat-lib/src/runtime/tt/check/: tests.rs
meerkat-lib/src/runtime/var_actor/: handler.rs
meerkat-lib/tests/: env_integration_test.rs  interning_tests.rs  nameres_integration_test.rs  net_integration_test.rs  types_integration_test.rs
meerkat-wasm/: .gitignore  Cargo.toml
meerkat-wasm/src/: lib.rs
meerkat-wasm/www/: index.html
meerkat/src/: main.rs  repl.rs
meerkat/tests/: dist_commit_client.mkt  dist_commit_server.mkt  html_client.mkt  html_local.mkt  net_orch1.mkt  net_orch2.mkt  net_orch3.mkt  poke_s1.mkt  test_client.mkt  test_cross_action.mkt  test_cycle.mkt  test_lists.mkt  test_mutual_services.mkt  test_nameres_thunks.mkt  test_nameres_warnings.mkt
meerkat/tests/mkn/: mkn_client.mkt  mkn_relay.mkt  (+23 more)
scripts/: manifest1.json  manifest1.mkn  manifest_dist_commit.json  mkn.py  run_network.py  test_mkn.py
