[package]
name = "meerkat-lib"
version = "0.3.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
logos = "0.12.1"
enum-as-inner = "0.6.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.61"
strum_macros = "0.25.3"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
kameo = "0.16"
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }
json = "0.12.4"
futures = "0.3"
dashmap = "5"
priority-queue = "1.3"
inline_colorization = "0.1.5"
log = "0.4"
anyhow = "1"
web-time = "1"
thiserror = "1"
async-recursion = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p = { version = "0.56", features = ["tokio", "tcp", "dns", "websocket", "noise", "yamux", "relay", "dcutr", "identify", "macros"] }
libp2p-stream = "0.4.0-alpha"

[target.'cfg(target_arch = "wasm32")'.dependencies]
libp2p = { version = "0.56", default-features = false, features = ["macros", "wasm-bindgen", "websocket-websys", "noise", "yamux", "relay", "identify"] }
libp2p-stream = "0.4.0-alpha"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
send_wrapper = { version = "0.6", features = ["futures"] }
