[package]
name = "meerkat-wasm"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
meerkat-lib = { path = "../meerkat-lib" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console", "Document", "Window", "Element", "HtmlElement"] }
